fix: collapsed

--- a/plugins/components-template/view/src/global.scss
+++ b/plugins/components-template/view/src/global.scss
@@ -11,7 +11,7 @@
           display: none;
         }
         .ant-pro-sider-collapsed-button {
-          right: -23px;
+          right: -70px;
           border-radius: 0 25px 25px 0;
         }
       }
